# hub4com-mingw

./: .cvsignore  .gitignore  Building.MinGW.txt  CMakeLists.txt  comhub.h  filters.h  utils.h
cmake/: i686-w64-mingw32.cmake  x86_64-w64-mingw32.cmake
plugins/: CMakeLists.txt
plugins/awakseq/: CMakeLists.txt  filter.cpp
plugins/connector/: CMakeLists.txt  port.cpp
plugins/crypt/: CMakeLists.txt  filter.cpp
plugins/echo/: CMakeLists.txt  filter.cpp
plugins/escinsert/: CMakeLists.txt  filter.cpp
plugins/escparse/: CMakeLists.txt  filter.cpp
plugins/linectl/: CMakeLists.txt  filter.cpp
plugins/lsrmap/: CMakeLists.txt  filter.cpp
plugins/pin2con/: CMakeLists.txt  filter.cpp
plugins/pinmap/: CMakeLists.txt  filter.cpp
plugins/purge/: CMakeLists.txt  filter.cpp
plugins/serial/: CMakeLists.txt  port.cpp
plugins/tag/: CMakeLists.txt  filter.cpp
plugins/tcp/: CMakeLists.txt  comport.h  port.cpp
plugins/telnet/: CMakeLists.txt  filter.cpp
plugins/trace/: CMakeLists.txt  filter.cpp
