add_subdirectory(awakseq)
add_subdirectory(connector)
add_subdirectory(crypt)
add_subdirectory(echo)
add_subdirectory(escinsert)
add_subdirectory(escparse)
add_subdirectory(linectl)
add_subdirectory(lsrmap)
add_subdirectory(pin2con)
add_subdirectory(pinmap)
add_subdirectory(purge)
add_subdirectory(serial)
add_subdirectory(tag)
add_subdirectory(tcp)
add_subdirectory(telnet)
add_subdirectory(trace)
